deploy/overlay/milvus-lite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: milvus-lite-db
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: milvus-lite-db
